--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Adam Bell</h1>
+            <h2>Computer Science Undergraduate</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Hardworking, disciplined undergraduate student. Loves technology and helping people. Motivated to learn, solve problems, and drive innovation. Accustomed to handling sensitive, confidential data. Values teamwork.
                     </p>
                 </div>
             </div>
@@ -86,28 +84,32 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="October 2015 – Present">
+                <h3>Geek Squad</h3>
+                <h4>Advance Repair Agent</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+			Managing the customer experience for clients and helping find solutions to tech problems. 
+			Responsible for coaching the sales team, building trust and explaining services and technology. Represents as a master in technology for PC’s, Smart Phones, and Televisions. 
+			Maintains, repairs, and services over 100 technical products daily.
+		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="October 2014 – October 2015">
+                <h3>Geek Squad</h3>
+                <h4>I.T. Operations Agent</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+			Solutions expert, managing the check-in and check-out experience for clients and helping find the complete solution for their tech problems. Consultation Agents also coach the sales team, building trust and explaining services and technology to help staff match available services with the challenge’s customers are facing. Their knowledge of services, technology and business group strategies in partnership with the sales team ensures no client is ever left unserved or underserved.
+		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="December 2013 – November 2014">
+                <h3>Lewiville Independent School District</h3>
+                <h4>Extended School Day Aid</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+			Interacts with students (ages 5-12) to create positive environments for the students. 
+			Communicates effectively with students, parents, and co-workers. 
+			Creates and maintains positive relations with students and parents. 
+		</p>
             </div>
         </div>
     </div>
@@ -116,19 +118,19 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h3>University of North Texas</h3>
+            <span class="education-date">Expected Graduation: Fall 2019</span>
             <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+         	<p>
+			Designated by National Security Agency and Department of Homeland Security  
+		</p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Computer Security Certifcate</h3>
+            <span class="education-date">Expected Completion: Fall 2019</span>
+            <h4>Designated by National Security Agency and Department of Homeland Security</h4>
             <ul>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
