--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <span class="education-date">Expected Graduation: Fall 2019</span>
             <h4>Bachelor of Science in Computer Science</h4>
          	<p>
-			Designated by National Security Agency and Department of Homeland Security  
+			 ipsum
 		</p>
         </div>
         <!-- End .education-block -->
@@ -130,16 +130,25 @@
         <div class="education-block">
             <h3>Computer Security Certifcate</h3>
             <span class="education-date">Expected Completion: Fall 2019</span>
-            <h4>Designated by National Security Agency and Department of Homeland Security</h4>
+            <h4>Designated by National Security Agency and Department of Homeland Security for completion of the following courses:</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    CSCE 2610: Assembly Language and Computer Organization
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    CSCE 3530: Computer Networks
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    CSCE 4350: Introduction to Database Systems Design
+                </li>
+                <li>
+                    CSCE 4550: Introduction to Computer Security
+                </li>
+                <li>
+                    CSCE 4560: Secure Electronic Commerce
+                </li>
+                <li>
+                    CSCE 4600: Introduction to Operating Systems
                 </li>
             </ul>
         </div>
@@ -148,20 +157,22 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Projects in Development</h2>
         <div class="container">
             <div class="row">
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Augmented Reality Application</h3>
+				<h4>(ARCore, Unity, Android Studio)</h4>
+                      			<p>
+                        			New students are getting lost on campus. This Android application will help students familiarize themselves with the school. 
+                        		</p>
+                        <a href="https://github.com/adambell95/Paberry-s-Peasants-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -173,15 +184,33 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Portfolio Website</h3>
+				<h4>(HTML, CSS, Javascript)</h4>
+                       			<p>
+                        			A website in the making, designed to show experience, education, projects, skills, and contact information.
+                       			</p>
+                        <a href="https://github.com/adambell95/adambell95.github.io">View Project</a>
                     </div>
-                    <!-- End .project-info -->
+   		 <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Client / Server Software</h3>
+				<h4>(C, Sockets)</h4>
+			    		<p>
+						A client and server C program where the server can connect to one client at a time. The client sends a message (a complete sentence) to the server. The server counts the total number of vowels present in that message and returns that number to the client. The client prints that number. To close the connection, client sends “Bye” message to the server. Upon receiving that message, the server closes that connection.
+                        		</p>
+                        <a href="https://github.com/adambell95/adambell95.github.io">View Project</a>
+                    </div>
+   		 <!-- End .project-info -->
+                </div>
+                <!-- End .project -->     
             </div>
         </div>
     </div>
@@ -190,32 +219,24 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
+<li>C++</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
+	    <li>C++</li>
+	    <li>C#</li>
+	    <li>C</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Javascript</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Computer Networks</li>
+            <li>Microsoft Office</li>
+            <li>Microsoft Operating Systems</li>
+            <li>Linux</li>
+	    <li>Technical Support</li>
+  	    <li>Cybersecurity</li>
+     	    <li>Team Leadership</li>
+    	    <li>Teamwork</li>
+    	    <li>Wingdings</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -223,7 +244,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/adambell@my.unt.edu">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -239,7 +260,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2019 Adam Bell
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -253,20 +274,9 @@
                             <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
                             <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
