--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
 
             <div data-date="December 2013 – November 2014">
-                <h3>Lewiville Independent School District</h3>
+                <h3>Lewisville Independent School District</h3>
                 <h4>Extended School Day Aid</h4>
                 <p>
 			Interacts with students (ages 5-12) to create positive environments for the students. 
@@ -121,9 +121,6 @@
             <h3>University of North Texas</h3>
             <span class="education-date">Expected Graduation: Fall 2019</span>
             <h4>Bachelor of Science in Computer Science</h4>
-         	<p>
-			 ipsum
-		</p>
         </div>
         <!-- End .education-block -->
 
