--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Adam Bell</h1>
             <h2>Computer Science Undergraduate</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="/Resume_Adam_Bell.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
