--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			    		<p>
 						A client and server C program where the server can connect to one client at a time. The client sends a message (a complete sentence) to the server. The server counts the total number of vowels present in that message and returns that number to the client. The client prints that number. To close the connection, client sends “Bye” message to the server. Upon receiving that message, the server closes that connection.
                         		</p>
-                        <a href="https://github.com/adambell95/adambell95.github.io">View Project</a>
+                        <a href="https://github.com/adambell95/client_server_software">View Project</a>
                     </div>
    		 <!-- End .project-info -->
                 </div>
