--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <a href="https://github.com/adambell95" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/adambell95" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/adambell95" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
 
                     </ul>
