--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
