--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hardworking, disciplined undergraduate student. Loves technology and helping people. Motivated to learn, solve problems, and drive innovation. Accustomed to handling sensitive, confidential data. Values teamwork.
+                        Hardworking, disciplined undergraduate student. Loves technology and helping people. 
+			Motivated to learn, solve problems, and drive innovation. 
+			Accustomed to handling sensitive, confidential data. Values teamwork.
                     </p>
                 </div>
             </div>
