--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                         Hardworking, disciplined undergraduate student. Loves technology and helping people. 
 			Motivated to learn, solve problems, and drive innovation. 
 			Accustomed to handling sensitive, confidential data. Values teamwork.
+                        Hardworking, disciplined undergraduate student. Loves technology and helping people. 
+			Motivated to learn, solve problems, and drive innovation. 
+			Accustomed to handling sensitive, confidential data. Values teamwork.
+			Hardworking, disciplined undergraduate student. Loves technology and helping people. 
+			Motivated to learn, solve problems, and drive innovation. 
+			Accustomed to handling sensitive, confidential data. Values teamwork.
                     </p>
                 </div>
             </div>
