--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project1.jpg" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -179,7 +179,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project5.jpg" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
