--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project2.png" />
+                        <img src="images/project4.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
