--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Client / Server Software</h3>
-				<h4>(C, Sockets)</h4>
+				<h4>(Java)</h4>
 			    		<p>
-						A client and server C program where the server can connect to one client at a time. Send a sentence and watch the server respond.
+						A client and server Java program where the server can connect to one client at a time. Send a sentence and watch the server respond.
                         		</p>
                         <a href="https://github.com/adambell95/client_server_software">View Project</a>
                     </div>
