--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Augmented Reality Application</h3>
-				<h4>(ARCore, Unity, Android Studio)</h4>
+				<h4>(C#, Unity, ARCore)</h4>
                       			<p>
                         			New students are getting lost on campus. This Android application will help students familiarize themselves with the school. 
                         		</p>
